--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-  <script src="js/scripts.js">
-  alert("Hi there, and welcome.")
+  <script>
+  alert("Hi there, and welcome.");
   </script>
 </body>
 </html>
