--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <script>
-  alert("Hi there, and welcome.");
+  document.write("Hi there, and welcome.");
   </script>
 </body>
 </html>
