--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <script>
-  document.write("Hi there, and welcome.");
+   document.write("Aisha Anum").style.fontSize = "xx-large";
   </script>
 </body>
 </html>
