--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 
 <body>
   <script>
-   document.write("Aisha Anum").style.fontSize = "xx-large";
+   document.write("Aisha Anum")";
+    var img = new Image();
+    img.src = 'http://images2.imagebam.com/c8/f2/4f/ef37c51062522184.jpg';
+    img.onclick = function() {
+    window.location.href = 'http://images2.imagebam.com/c8/f2/4f/ef37c51062522184.jpg';
+    };
+    document.body.appendChild(img);
   </script>
 </body>
 </html>
