--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     window.open(src);
     }
     </script>
-    <img src="car.jpg" id="thisImg" height="150" size="150" alt="bmw" onclick="image(this)">
+    <img src="http://images2.imagebam.com/c0/30/c6/eb0cfd1062521564.jpg" id="thisImg" height="150" size="150" alt="bmw" onclick="image(this)">
 </body>
 </html>
