--- a/index.html
+++ b/index.html
@@ -20,5 +20,14 @@
     }
     </script>
     <img src="http://images2.imagebam.com/c0/30/c6/eb0cfd1062521564.jpg" id="thisImg" height="150" size="150" alt="bmw" onclick="image(this)">
+  
+  <script type="text/javascript">
+  function image(img) {
+    var src = img.src;
+    window.open(src);
+    }
+    </script>
+    <img src="http://images2.imagebam.com/85/a9/fe/1451021125715684.jpg" id="thisImg" height="150" size="150" alt="bmw" onclick="image(this)">
+  
 </body>
 </html>
