--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     window.open(src);
     }
     </script>
-    <img src="http://images2.imagebam.com/85/a9/fe/1451021125715684.jpg" id="thisImg" height="150" size="150" alt="bmw" onclick="image(this)">
+    <img src="http://images2.imagebam.com/85/a9/fe/1451021125715684.jpg" id="thisImg" height="150" size="150" alt="kendall" onclick="image(this)">
   
   
   <script type="text/javascript">
@@ -28,8 +28,24 @@
     window.open(src);
     }
     </script>
-    <img src="http://images2.imagebam.com/c0/30/c6/eb0cfd1062521564.jpg" id="thisImg" height="150" size="150" alt="bmw" onclick="image(this)">
+    <img src="http://images2.imagebam.com/c0/30/c6/eb0cfd1062521564.jpg" id="thisImg" height="150" size="150" alt="sophiabush" onclick="image(this)">
+
+<script type="text/javascript">
+  function image(img) {
+    var src = img.src;
+    window.open(src);
+    }
+    </script>
+    <img src="http://images2.imagebam.com/6e/b6/e3/2c30341115605634.jpg" id="thisImg" height="150" size="150" alt="megan" onclick="image(this)">
   
+  
+  <script type="text/javascript">
+  function image(img) {
+    var src = img.src;
+    window.open(src);
+    }
+    </script>
+    <img src="http://images2.imagebam.com/0e/b4/e5/0ad8df1081095174.jpg" id="thisImg" height="150" size="150" alt="kim" onclick="image(this)">  
 
   
 </body>
