--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
     </script>
     <img src="http://images2.imagebam.com/0e/b4/e5/0ad8df1081095174.jpg" id="thisImg" height="150" size="150" alt="kim" onclick="image(this)">  
 
+  <script type="text/javascript">
+  function image(img) {
+    var src = img.src;
+    window.open(src);
+    }
+    </script>
+    <img src="  https://scontent-frt3-1.cdninstagram.com/vp/73c6dbc557d00b1dd8c09474c7484634/5D59E012/t51.2885-15/e35/43648524_1004092456429860_3070360972474036487_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com
+" id="thisImg" height="150" size="150" alt="tugce" onclick="image("https://www.instagram.com/tgcbyrgl/")">
   
 </body>
 </html>
