--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     }
     </script>
     <img src="  https://scontent-frt3-1.cdninstagram.com/vp/73c6dbc557d00b1dd8c09474c7484634/5D59E012/t51.2885-15/e35/43648524_1004092456429860_3070360972474036487_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com
-" id="thisImg" height="150" size="150" alt="tugce" onclick="location.href='https://www.instagram.com/tgcbyrgl/';">
+" id="thisImg" height="150" size="150" alt="tugce" onclick="location.href='https://www.instagram.com/tgcbyrgl/';"> <BR>
   
   DOWN SKIRT <BR>
   DOWN BOOTS <BR>
